package com.DjembeInc.Johnytech6Plugin;
import org.bukkit.plugin.java.JavaPlugin;

public class JohnytechPlugin  extends JavaPlugin{
	 // Fired when plugin is first enabled
    @Override
    public void onEnable() {
    }
    // Fired when plugin is disabled
    @Override
    public void onDisable() {

    }
}
